# custom-hook

./: .pre-commit-hooks.yaml  pyproject.toml
hooks/: aqd_review.py  audit_setup.py  get_suggestions.py  setup_details.py  sonar_checks.py
